--- a/CSS/main.d.l.css
+++ b/CSS/main.d.l.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 @font-face {
     font-family: "PingFangSC-Light";
     src: url("./Font-Faiml/PingFangSC4.otf") format('truetype');
