--- a/CSS/main.d.l.css
+++ b/CSS/main.d.l.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @font-face {
     font-family: "PingFangSC-Light";
-    src: url("./Font-Faiml/PingFangSC4.otf") format('truetype');
+    src: url("./Font-Faiml/HarmonyOS_Sans_SC_Light.ttf") format('truetype');
 }
 #grad1 {
     background-image: -webkit-linear-gradient(bottom, red, #fd8403, yellow); 
