--- a/CSS/main.d.l.css
+++ b/CSS/main.d.l.css
@@ -158,6 +158,15 @@ font-size: 36px;
 
 }
 a {
+    /* color: inherit;
+    text-decoration: none; */
     color: inherit;
     text-decoration: none;
+    transition: .25s;
+}
+.c-aaa
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
