--- a/CSS/main.d.l.css
+++ b/CSS/main.d.l.css
@@ -1,85 +1,90 @@
 @charset "utf-8";
+
 @font-face {
     font-family: "PingFangSC-Light";
     src: url("./Font-Faiml/HarmonyOS_Sans_SC_Light.ttf") format('truetype');
 }
+
 #grad1 {
-    background-image: -webkit-linear-gradient(bottom, red, #fd8403, yellow); 
-    -webkit-background-clip: text; 
-    -webkit-text-fill-color: transparent; 
+    background-image: -webkit-linear-gradient(bottom, red, #fd8403, yellow);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
-#pup
-{
+
+#pup {
     color: rgba(188, 18, 200, 0.755) 20%;
 }
-.big
-{
+
+.big {
     font-size: 50px;
 }
-*
-{
+
+* {
     font-family: "PingFangSC-Light";
 }
-.center{
- ine-height: 200px;
 
-text-align:center;
-
- /* height: 200px; */
-/* font-family: "PingFang SC";
- */
- /* font-family: PingFangSC-Regular, sans-serif; */
-font-size: 36px; 
-}
-.pc
-{
+.center {
     ine-height: 200px;
 
-    text-align:center;
-    
-     /* height: 200px; */
-    
-    font-size: 36px; 
+    text-align: center;
+
+    /* height: 200px; */
+    /* font-family: "PingFang SC";
+ */
+    /* font-family: PingFangSC-Regular, sans-serif; */
+    font-size: 36px;
 }
+
+.pc {
+    ine-height: 200px;
+
+    text-align: center;
+
+    /* height: 200px; */
+
+    font-size: 36px;
+}
+
 .footer {
     position: fixed;
     left: 0px;
     bottom: 0px;
     width: 100%;
     height: 50px;
-    background-color  :initial;
+    background-color: initial;
     z-index: 9999;
 }
+
 #grad1 {
     height: 200px;
-    background-color: red; /* 针对不支持渐变的浏览器 */
+    background-color: red;
+    /* 针对不支持渐变的浏览器 */
     background-image: linear-gradient(red, yellow);
-  }
+}
 
-@media ( prefers-color-scheme: dark)
-{
-    body 
-    {
+@media (prefers-color-scheme: dark) {
+    body {
         background-color: #333;
     }
-    p
-    {
+
+    p {
         color: white;
     }
-    h1
-    {
+
+    h1 {
         color: white;
     }
+
     .btn {
         /* 文字颜色 */
-        color: #0099CC; 
+        color: #0099CC;
         /* 清除背景色 */
-        background: transparent; 
+        background: transparent;
         /* 边框样式、颜色、宽度 */
         border: 2px solid #0099CC;
         /* 给边框添加圆角 */
         border: 10ch;
-        border-radius: 6px; 
+        border-radius: 6px;
         /* 字母转大写 */
         border: none;
         color: #333;
@@ -88,38 +93,55 @@ font-size: 36px;
         display: inline-block;
         font-size: 16px;
         margin: 2px 2px;
-        -webkit-transition-duration: 0.4s; /* Safari */
+        -webkit-transition-duration: 0.4s;
+        /* Safari */
         transition-duration: 0.4s;
         cursor: pointer;
         text-decoration: none;
         text-transform: uppercase;
     }
+
     .btn1 {
-        background-color: #333; 
-        color: white; 
+        background-color: #333;
+        color: white;
         border: 2px solid #008CBA;
     }
+
     /* 悬停样式 */
     .btn1:hover {
         background-color: #008CBA;
         color: white;
     }
-    header
-    {
+
+    header {
         color: aliceblue;
     }
+
+    .window_css {
+        display: none;
+        position: absolute;
+        top: 20%;
+        left: 25%;
+        width: 50%;
+        height: 60%;
+        border-radius: 24px;
+        border: 3px solid rgb(0, 0, 0);
+        background-color: rgb(0, 0, 0);
+        z-index: 11;
+    }
 }
+
 @media (prefers-color-scheme: light) {
     .btn {
         /* 文字颜色 */
-        color: #0099CC; 
+        color: #0099CC;
         /* 清除背景色 */
-        background: transparent; 
+        background: transparent;
         /* 边框样式、颜色、宽度 */
         border: 2px solid #0099CC;
         /* 给边框添加圆角 */
         border: 10ch;
-        border-radius: 6px; 
+        border-radius: 6px;
         /* 字母转大写 */
         border: none;
         color: white;
@@ -128,35 +150,52 @@ font-size: 36px;
         display: inline-block;
         font-size: 16px;
         margin: 2px 2px;
-        -webkit-transition-duration: 0.4s; /* Safari */
+        -webkit-transition-duration: 0.4s;
+        /* Safari */
         transition-duration: 0.4s;
         cursor: pointer;
         text-decoration: none;
         text-transform: uppercase;
     }
+
     .btn1 {
-        background-color: white; 
-        color: black; 
+        background-color: white;
+        color: black;
         border: 2px solid #008CBA;
     }
+
     /* 悬停样式 */
     .btn1:hover {
         background-color: #008CBA;
         color: white;
     }
+
+    .window_css {
+        display: none;
+        position: absolute;
+        top: 20%;
+        left: 25%;
+        width: 50%;
+        height: 60%;
+        border-radius: 24px;
+        border: 3px solid rgb(255, 255, 255);
+        background-color: rgb(255, 255, 255);
+        z-index: 100;
+        overflow: hidden;
+    }
 }
+
 /* header
 {
     background-color: darkorange;
 } */
-@media (max-width: 640px)
-{
-    p
-    {
+@media (max-width: 640px) {
+    p {
         font-size: 0rem;
     }
 
 }
+
 a {
     /* color: inherit;
     text-decoration: none; */
@@ -164,9 +203,88 @@ a {
     text-decoration: none;
     transition: .25s;
 }
-.c-aaa
-{
+
+.c-aaa {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.shadow_css {
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(215, 215, 215);
+    z-index: 10;
+    /* 为mozilla firefox 设置透明度  */
+    /* -moz-opacity: 0.6;
+    /* 设置透明度 */
+    /* opacity: .60; */
+    /* 为IE 设置透明度  */
+    /* filter: alpha(opacity=66); */
+    filter: blur(100px);
+}
+
+.window_css {
+    display: none;
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    width: 50%;
+    height: 60%;
+    border-radius: 24px;
+    border: 3px solid rgb(0 140 186);
+    background-color: rgb(255 255 255);
+    z-index: 11;
+}
+
+.colll {
+    transform: translateX(290%) translateY(212%);
+    width: 10px;
+    height: 10px;
+    background-color: red;
+    border-radius: 5px;
+    position: fixed;
+    z-index: 100;
+}
+
+.her {
+    height: 1%;
+}
+
+.dong {
+    animation-duration: 0.8s;
+    animation-name: slidein;
+}
+
+@keyframes slidein {
+    from {
+        height: 0%;
+        /* width: 0%; */
+    }
+
+    to {
+        height: 60%;
+        /* width: 50%; */
+    }
+}
+
+.dong1 {
+    animation-duration: 0.4s;
+    animation-name: slidein1;
+}
+
+@keyframes slidein1 {
+    from {
+        height: 0%;
+        width: 0%;
+    }
+
+    to {
+        height: 100%;
+        width: 100%;
+    }
 }
