--- a/CSS/main.d.l.css
+++ b/CSS/main.d.l.css
@@ -125,9 +125,27 @@
         width: 50%;
         height: 60%;
         border-radius: 24px;
-        border: 3px solid rgb(0, 0, 0);
+        border: 1px solid rgb(0, 140, 186);
         background-color: rgb(0, 0, 0);
         z-index: 11;
+    }
+
+    .shadow_css {
+        display: none;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(50, 49, 49);
+        z-index: 10;
+        /* 为mozilla firefox 设置透明度  */
+        /* -moz-opacity: 0.6;
+        /* 设置透明度 */
+        /* opacity: .60; */
+        /* 为IE 设置透明度  */
+        /* filter: alpha(opacity=66); */
+        filter: blur(10px);
     }
 }
 
@@ -178,10 +196,28 @@
         width: 50%;
         height: 60%;
         border-radius: 24px;
-        border: 3px solid rgb(255, 255, 255);
+        border: 3px solid rgb(0, 140, 186);
         background-color: rgb(255, 255, 255);
         z-index: 100;
         overflow: hidden;
+    }
+
+    .shadow_css {
+        display: none;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(239, 239, 239, 0.635);
+        z-index: 10;
+        /* 为mozilla firefox 设置透明度  */
+        /* -moz-opacity: 0.6;
+        /* 设置透明度 */
+        /* opacity: .60; */
+        /* 为IE 设置透明度  */
+        /* filter: alpha(opacity=66); */
+        filter: blur(10px);
     }
 }
 
@@ -189,56 +225,28 @@
 {
     background-color: darkorange;
 } */
-@media (max-width: 640px) {
-    p {
-        font-size: 0rem;
+@media (max-width: 1080px) {
+    .window_showee {
+        height: 23%;
     }
-
 }
 
-a {
-    /* color: inherit;
-    text-decoration: none; */
+.a {
     color: inherit;
     text-decoration: none;
     transition: .25s;
+}
+
+.a :hover {
+    /* color: inherit;
+    text-decoration: none; */
+    color: rgb(0, 140, 186);
 }
 
 .c-aaa {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.shadow_css {
-    display: none;
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(215, 215, 215);
-    z-index: 10;
-    /* 为mozilla firefox 设置透明度  */
-    /* -moz-opacity: 0.6;
-    /* 设置透明度 */
-    /* opacity: .60; */
-    /* 为IE 设置透明度  */
-    /* filter: alpha(opacity=66); */
-    filter: blur(100px);
-}
-
-.window_css {
-    display: none;
-    position: absolute;
-    top: 20%;
-    left: 25%;
-    width: 50%;
-    height: 60%;
-    border-radius: 24px;
-    border: 3px solid rgb(0 140 186);
-    background-color: rgb(255 255 255);
-    z-index: 11;
 }
 
 .colll {
@@ -256,7 +264,7 @@ a {
 }
 
 .dong {
-    animation-duration: 0.8s;
+    animation-duration: 0.4s;
     animation-name: slidein;
 }
 
@@ -280,11 +288,50 @@ a {
 @keyframes slidein1 {
     from {
         height: 0%;
-        width: 0%;
     }
 
     to {
         height: 100%;
+    }
+}
+
+.window_showee {
+    height: 23%;
+}
+
+.u {
+    /* display: block; */
+    animation-duration: 0.95s;
+    animation-name: donghua;
+}
+
+@keyframes donghua {
+    from {
+        margin-left: 100%;
+        width: 300%;
+    }
+
+    to {
+        margin-left: 0%;
         width: 100%;
+        /* margin-right: 100%; */
+    }
+}
+.u2 {
+    display: block;
+    animation-duration: 0.95s;
+    animation-name: donghua2;
+}
+
+@keyframes donghua2 {
+    from {
+        margin-left: 0%;
+        width: 100%;
+    }
+
+    to {
+        margin-left: 100%;
+        width: 300%;
+        /* margin-right: 100%; */
     }
 }
