--- a/CSS/main.d.l.css
+++ b/CSS/main.d.l.css
@@ -55,12 +55,6 @@
     z-index: 9999;
 }
 
-#grad1 {
-    height: 200px;
-    background-color: red;
-    /* 针对不支持渐变的浏览器 */
-    background-image: linear-gradient(red, yellow);
-}
 
 @media (prefers-color-scheme: dark) {
     body {
@@ -317,6 +311,7 @@
         /* margin-right: 100%; */
     }
 }
+
 .u2 {
     display: block;
     animation-duration: 0.95s;
@@ -333,5 +328,68 @@
         margin-left: 100%;
         width: 300%;
         /* margin-right: 100%; */
+    }
+}
+#input{
+    border-radius: 10px;
+}
+.window_css_ {
+    display: none;
+    position: absolute;
+    top: 35%;
+    left: 40%;
+    width: 20%;
+    height: 30%;
+    border-radius: 24px;
+    border: 1px solid rgb(0, 140, 186);
+    background-color: rgb(255, 255, 255);
+    z-index: 11;
+}
+
+.shadow_css_ {
+    display: none;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(125, 123, 123, 0.784);
+    z-index: 10;
+    /* 为mozilla firefox 设置透明度  */
+    /* -moz-opacity: 0.6;
+    /* 设置透明度 */
+    /* opacity: .60; */
+    /* 为IE 设置透明度  */
+    /* filter: alpha(opacity=66); */
+    filter: blur(10px);
+}
+.dong0101 {
+    animation-duration: 0.4s;
+    animation-name: slidein0101;
+}
+
+@keyframes slidein0101 {
+    from {
+        height: 0%;
+        /* width: 0%; */
+    }
+
+    to {
+        height: 30%;
+        /* width: 50%; */
+    }
+}
+.dong1_ {
+    animation-duration: 0.4s;
+    animation-name: slidein1_;
+}
+
+@keyframes slidein1_ {
+    from {
+        height: 0%;
+    }
+
+    to {
+        height: 100%;
     }
 }
