--- a/rsci/styles/main.d.l.css
+++ b/rsci/styles/main.d.l.css
@@ -12,11 +12,44 @@
 .big {
     font-size: 50px;
 }
-
+body
+{
+    background-image: url("../images/back.jpeg");
+    background-position: center center;
+    /* 背景图不平铺 */
+    background-repeat: no-repeat;
+    /* 当内容高度大于图片高度时，背景图像的位置相对于viewport固定 */
+    background-attachment: fixed;
+    /* 让背景图基于容器大小伸缩 */
+    background-size: cover;
+    /* 设置背景颜色，背景图加载过程中会显示背景色 */
+}
 * {
     font-family: "PingFangSC-Light";
+    margin: 0;
+    padding: 0;
+}
+.video-box {
+    position: relative;
+    height: 100vh;
+    background-color: #C1CFF7;
+    /*进行视频裁剪*/
+    overflow: hidden;
 }
 
+.video-box .video-background {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    /*保证视频内容始终居中*/
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    /*保证视频充满屏幕*/
+    object-fit: cover;
+    min-height: 800px;
+    z-index: 0;
+}
 .center {
     ine-height: 200px;
 
