--- a/styles/media.css
+++ b/styles/media.css
@@ -52,13 +52,15 @@
     header {
         color: aliceblue;
     }
-
+    .portrait
+    {
+        font-size: 12px;
     .window_css {
         display: none;
         position: absolute;
         top: 20%;
-        left: 25%;
-        width: 50%;
+        left: 5%;
+        width: 90%;
         height: 60%;
         border-radius: 24px;
         border: 1px solid rgb(0, 140, 186);
@@ -75,30 +77,108 @@
         height: 100%;
         background-color: rgb(50, 49, 49);
         z-index: 10;
-        /* 为mozilla firefox 设置透明度  */
-        /* -moz-opacity: 0.6;
-        /* 设置透明度 */
-        /* opacity: .60; */
-        /* 为IE 设置透明度  */
-        /* filter: alpha(opacity=66); */
+         
         filter: blur(10px);
+    }
+    .window_css_ {
+        display: none;
+        position: absolute;
+        top: 35%;
+        left: 10%;
+        width: 80%;
+        height: 30%;
+        border-radius: 24px;
+        border: 1px solid rgb(0, 140, 186);
+        background-color: rgb(48, 48, 48);
+        z-index: 11;
+    }
+    
+    .shadow_css_ {
+        display: none;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(38, 38, 38, 0.784);
+        z-index: 10;
+         
+        filter: blur(10px);
+    }
+    
+}
+.landscape
+    {
+    .window_css {
+        display: none;
+        position: absolute;
+        top: 20%;
+        left: 20%;
+        width: 60%;
+        height: 60%;
+        border-radius: 24px;
+        border: 1px solid rgb(0, 140, 186);
+        background-color: rgb(0, 0, 0);
+        z-index: 11;
+    }
+
+    .shadow_css {
+        display: none;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: rgb(50, 49, 49);
+        z-index: 10;
+         
+        filter: blur(10px);
+    }
+    .window_css_ {
+        display: none;
+        position: absolute;
+        top: 35%;
+        left: 40%;
+        width: 20%;
+        height: 30%;
+        border-radius: 24px;
+        border: 1px solid rgb(0, 140, 186);
+        background-color: rgb(58, 58, 58);
+        z-index: 11;
+    }
+    
+    .shadow_css_ {
+        display: none;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(125, 123, 123, 0.784);
+        z-index: 10;
+         
+        filter: blur(10px);
+    }
+    
+}
+    div
+    {
+        color: rgb(241, 241, 241);
+    }
+    div strong{
+        color: rgb(241, 241, 241);
     }
 }
 
 @media (prefers-color-scheme: light) {
 
-    /* `.btn` 类定义按钮元素的 CSS 样式。 */
+    
     .btn {
-        /* 文字颜色 */
         color: #0099CC;
-        /* 清除背景色 */
         background: transparent;
-        /* 边框样式、颜色、宽度 */
         border: 2px solid #0099CC;
-        /* 给边框添加圆角 */
         border: 10ch;
         border-radius: 6px;
-        /* 字母转大写 */
         border: none;
         color: white;
         padding: 6px 20px;
@@ -107,7 +187,6 @@
         font-size: 16px;
         margin: 2px 2px;
         -webkit-transition-duration: 0.4s;
-        /* Safari */
         transition-duration: 0.4s;
         cursor: pointer;
         text-decoration: none;
@@ -125,36 +204,124 @@
         background-color: #008CBA;
         color: white;
     }
-
-    .window_css {
-        display: none;
-        position: absolute;
-        top: 20%;
-        left: 25%;
-        width: 50%;
-        height: 60%;
-        border-radius: 24px;
-        border: 3px solid rgb(0, 140, 186);
-        background-color: rgb(255, 255, 255);
-        z-index: 100;
-        overflow: hidden;
+    .portrait
+    {
+        font-size: 12px;
+        .window_css {
+            display: none;
+            position: absolute;
+            top: 20%;
+            left: 5%;
+            width: 90%;
+            height: 60%;
+            border-radius: 24px;
+            border: 3px solid rgb(0, 140, 186);
+            background-color: rgb(255, 255, 255);
+            z-index: 100;
+            overflow: hidden;
+        }
+    
+        .shadow_css {
+            display: none;
+            position: absolute;
+            top: 0%;
+            left: 0%;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(239, 239, 239, 0.635);
+            z-index: 10;
+            
+            filter: blur(10px);
+        }
+        .window_css_ {
+            display: none;
+            position: absolute;
+            top: 35%;
+            left: 10%;
+            width: 80%;
+            height: 30%;
+            border-radius: 24px;
+            border: 1px solid rgb(0, 140, 186);
+            background-color: rgb(255, 255, 255);
+            z-index: 11;
+        }
+        
+        .shadow_css_ {
+            display: none;
+            position: absolute;
+            top: 0%;
+            left: 0%;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(125, 123, 123, 0.784);
+            z-index: 10;
+            
+            filter: blur(10px);
+        }
+        
     }
-
-    .shadow_css {
-        display: none;
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(239, 239, 239, 0.635);
-        z-index: 10;
-        /* 为mozilla firefox 设置透明度  */
-        /* -moz-opacity: 0.6;
-        /* 设置透明度 */
-        /* opacity: .60; */
-        /* 为IE 设置透明度  */
-        /* filter: alpha(opacity=66); */
-        filter: blur(10px);
+    .landscape
+    {
+        .window_css {
+            display: none;
+            position: absolute;
+            top: 20%;
+            left: 20%;
+            width: 60%;
+            height: 60%;
+            border-radius: 24px;
+            border: 3px solid rgb(0, 140, 186);
+            background-color: rgb(255, 255, 255);
+            z-index: 100;
+            overflow: hidden;
+        }
+    
+        .shadow_css {
+            display: none;
+            position: absolute;
+            top: 0%;
+            left: 0%;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(239, 239, 239, 0.635);
+            z-index: 10;
+            
+            filter: blur(10px);
+        }
+        .window_css_ {
+            display: none;
+            position: absolute;
+            top: 35%;
+            left: 40%;
+            width: 20%;
+            height: 30%;
+            border-radius: 24px;
+            border: 1px solid rgb(0, 140, 186);
+            background-color: rgb(255, 255, 255);
+            z-index: 11;
+        }
+        
+        .shadow_css_ {
+            display: none;
+            position: absolute;
+            top: 0%;
+            left: 0%;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(125, 123, 123, 0.784);
+            z-index: 10;
+            
+            filter: blur(10px);
+        }
+        
     }
+}
+about
+{
+    line-height: 3rem;
+    display: none;
+}
+.portrait
+{
+    font-size: 12px;
 }
